chart/extra/argocd-ingress.yaml
# Source: https://www.reddit.com/r/Traefik/comments/d36iry/traefik_20_with_certmanager/
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: ci-letsencrypt-prod
    kubernetes.io/ingress.class: fake
  labels:
    traefik2: "true"
  name: argocd-ingress
  namespace: argocd
spec:
  rules:
  - host: argocd.foldy.dev
    http:
      paths:
      - backend:
          serviceName: argocd-server
          servicePort: 80
        path: /
  tls:
  - hosts:
    - argocd.foldy.dev
    secretName: argocd-foldy-dev-tls
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: https-only
  namespace: argocd
spec:
  redirectScheme:
    scheme: https
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-foldy-dev-80
  namespace: argocd
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`argocd.foldy.dev`) && PathPrefix(`/`)
      kind: Rule
      middlewares:
        - name: https-only
      services:
        - name: argocd-server
          port: 80
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: argocd-foldy-dev-tls
  namespace: argocd
spec:
  entryPoints:
    - websecure
  routes:
    - match: HostSNI(`argocd.foldy.dev`)
      kind: Rule
      services:
        - name: argocd-server
          port: 443
  tls:
    passthrough: true
    secretName: argocd-foldy-dev-tls
