chart/extra/foo.yaml
# Source: https://www.reddit.com/r/Traefik/comments/d36iry/traefik_20_with_certmanager/
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: ci-letsencrypt-prod
    kubernetes.io/ingress.class: fake
  labels:
    traefik2: "true"
  name: argocd-ingress
  namespace: ci
spec:
  rules:
  - host: argocd.foldy.dev
    http:
      paths:
      - backend:
          serviceName: ci-ui
          servicePort: 80
        path: /
  tls:
  - hosts:
    - argocd.foldy.dev
    secretName: argocd-foldy-dev-tls
